<resources>
    <string name="app_name">Hera</string>
    <string name="title_home">书城</string>
    <string name="title_dashboard">书架</string>
    <string name="title_notifications">Notifications</string>
    <string name="exit_massage">再按一次退出</string>
    <string name="connect_timeout">连接超时</string>
    <string name="connect_exception">网络异常</string>
    <string name="login">登录中</string>
    <string name="login_success">登录成功</string>
    <string name="text_login_btn">登 录</string>
    <string name="text_logout_btn">退出登录</string>
    <string name="title_main">我</string>
    <string name="text_password_hint">密码</string>
    <string name="text_login_title">账户登录</string>
    <string name="text_cancel">取消</string>
    <string name="text_register">注册</string>
    <string name="please_enter_username">请输入登录账号</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_enter_telephone">请输入手机号</string>
    <string name="please_enter_verify_code">请输入验证码</string>
    <string name="text_send_verify_code">发送验证码</string>
    <string name="text_username_hint">手机号/用户名/邮箱</string>
    <string name="text_telephone">手机号</string>
    <string name="text_reset_password_hint">6&#8211;16位字母与数字组合的密码</string>
    <string name="text_reset_new_password">输入新密码</string>
    <string name="text_reset_confirm_password">确认新密码</string>
    <string name="text_next">下一步</string>
    <string name="text_submit">提交</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="please_enter_confirm_password">请输入新确认密码</string>
    <string name="password_reset_check">两次密码输入不一致</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="title_reset_password_check">找回密码</string>
    <string name="title_reset_password">设置新登录密码</string>
    <string name="error_and_restart">崩溃了&#8230;&#8230;&#8230;</string>
    <string name="holder_book_title">一念永恒</string>
    <string name="holder_book_author">耳根</string>
    <string name="holder_book_category">玄幻修仙</string>
    <string name="text_collect_empty">书架空了，快去添加吧</string>
    <string name="text_go_to_list">去书城逛逛</string>
    <string name="text_detail">详情</string>
    <string name="text_menu">目录</string>
    <string name="holder_book_status">完结，共1639章</string>
    <string name="text_sort_asc">正序</string>
    <string name="text_sort_desc">倒序</string>
    <string name="text_add_to_collect">加书架</string>
    <string name="text_collecting">在书架</string>
    <string name="text_read">阅读</string>
    <string name="text_download">下载</string>
    <string name="text_night_mode">夜间模式</string>
</resources>
