<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorDefault">
    <com.delcache.hera.widget.CustomToolbar
            android:id="@+id/action_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fitsSystemWindows="true"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_margin="20dp">

        <EditText android:id="@+id/login_username"
                  android:layout_marginTop="40dp"
                  android:layout_marginBottom="15dp"
                  android:background="@null"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/text_username_hint"
                  android:textSize="@dimen/small_text"
                  android:singleLine="true"/>

        <View android:layout_width="match_parent"
              android:layout_height="@dimen/spacing1"
              android:background="#CCCCCC"/>

        <EditText android:id="@+id/login_password"
                  android:background="@null"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="15dp"
                  android:layout_marginBottom="15dp"
                  android:hint="@string/text_password_hint"
                  android:inputType="textPassword"
                  android:textSize="@dimen/small_text"
                  android:singleLine="true"/>

        <View android:layout_width="match_parent"
              android:layout_height="@dimen/spacing1"
              android:background="#CCCCCC"/>

        <TextView
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_forget_password"
                android:textSize="@dimen/middle_text"
                android:gravity="end"
                android:layout_marginTop="15dp"/>

        <TextView android:id="@+id/login_confirm"
                  android:layout_width="match_parent"
                  android:background="@drawable/border_white"
                  android:layout_marginTop="25dp"
                  android:layout_height="40dp"
                  android:gravity="center"
                  android:text="@string/text_login_btn"
                  android:textColor="@color/colorDefault"
                  android:textSize="@dimen/middle_text"/>
    </LinearLayout>
</LinearLayout>