<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorDefault">
    <com.delcache.hera.widget.CustomToolbar
            android:id="@+id/action_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fitsSystemWindows="true"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_margin="20dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="15dp"
                      android:layout_marginBottom="15dp">
            <TextView android:background="@null"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:gravity="start"
                      android:text="@string/text_reset_confirm_password"
                      android:textSize="@dimen/middle_text"/>
            <EditText android:id="@+id/new_password"
                      android:layout_weight="3"
                      android:background="@null"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/small_text"
                      android:inputType="textPassword"
                      android:hint="@string/text_reset_password_hint"
                      android:singleLine="true"/>
        </LinearLayout>
        <View android:layout_width="match_parent"
              android:layout_height="@dimen/spacing1"
              android:background="#999999"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="15dp"
                      android:layout_marginBottom="15dp">
            <TextView android:background="@null"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:gravity="start"
                      android:text="@string/text_reset_confirm_password"
                      android:textSize="@dimen/middle_text"/>
            <EditText android:id="@+id/confirm_password"
                      android:background="@null"
                      android:layout_width="0dp"
                      android:layout_weight="3"
                      android:layout_height="wrap_content"
                      android:hint="@string/text_reset_password_hint"
                      android:inputType="textPassword"
                      android:textSize="@dimen/small_text"
                      android:singleLine="true"/>
        </LinearLayout>
        <View android:layout_width="match_parent"
              android:layout_height="@dimen/spacing1"
              android:background="#999999"/>
        <TextView android:id="@+id/confirm"
                  android:layout_width="match_parent"
                  android:background="@drawable/border_white"
                  android:layout_marginTop="40dp"
                  android:layout_height="40dp"
                  android:gravity="center"
                  android:text="@string/text_submit"
                  android:textColor="@color/colorDefault"
                  android:textSize="@dimen/middle_text"/>
    </LinearLayout>
</LinearLayout>