<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorDefault">
    <com.delcache.hera.widget.CustomToolbar
            android:id="@+id/action_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:fitsSystemWindows="true"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:padding="20dp">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/book_title"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorDefault"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                <TextView
                        android:id="@+id/book_author"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorCCC"
                        android:textSize="16sp"/>
                <TextView
                        android:id="@+id/book_category"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorCCC"
                        android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                          android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <ImageView
                        android:id="@+id/book_pic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        <android.support.design.widget.TabLayout
                android:id="@+id/detail_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </android.support.design.widget.TabLayout>
        <android.support.v4.view.ViewPager
                android:id="@+id/vp_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="bottom"
            android:baselineAligned="false"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/add_to_collect"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:drawableStart="@mipmap/icon_add_to_collect"
                    android:text="@string/text_add_to_collect"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/read_book"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_white"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/colorDefault"
                    android:textSize="@dimen/middle_text"
                    android:text="@string/text_read"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/download_book"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:drawablePadding="5dp"
                    android:drawableStart="@mipmap/icon_download"
                    android:text="@string/text_download"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>